# PyRigi

./: .flake8  .gitignore  .zenodo.json  CONTRIBUTING.md  LICENSE  README.md  contributors.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: approval-linting.yml  gh-pages.yml  python-publish.yml  python-test-dev.yml  python-test-main.yml  python-test.yml
Assets/: graphicx.aux  handbook.aux  handbook.tex
assets/: handbook.tex
benchmark/: __init__.py  analysis.md  benchmark_config.example.yaml  benchmarkapp.py  check_staleness.py  pipeline.py
benchmark/_utils/: __init__.py  benchmark_merger.py  checkpoint.py  cli.py  config_loader.py  dataset_loader.py  function_loader.py  models.py  param_parser.py  runner.py  test_generator.py  test_generator_mult.py
doc/: conf.py  index.md  index.rst  refs.bib  remove_skip_execution_magic.py  remove_skip_execution_tag.py  requirements.txt  sort_release_notes.py
doc/_static/: thm.css  tippy.css
doc/development/: cheatsheet.md  contributors.md  howto.md  index.md  index.rst  internal_api.md  internal_reference.md
doc/development/howto/: communication.md  database.md  database_interface.md  dependencies.md  documentation.md  git.md  input-checks.md  input_checks.md  module_structure.md  notation.md  package_structure.md  style-guide.md  style_guide.md  testing.md
doc/development/internal_api/: framework_base.md
doc/development/internal_reference/: framework_base.md  graph_store.md
doc/math/: cheatsheet.md  definitions.md  graph_theory.md  index.md  index.rst  matroid_theory.md  references.md  rigidity.md
doc/math/graph-theory/: double-banana.md  examples.md  gain_graphs.md  known-families.md
doc/math/rigidity/: generic.md  global.md  infinitesimal.md  nac-colorings.md  realizations.md  redundant.md  second-order.md
doc/module/: framework.md  framework.rst  graph.md  graph.rst  motion.md  motion.rst
doc/scripts/: docstring_convert.py  migrate_docstrings.py  migration_targets.py
doc/userguide/: api.md  getting_started.md  index.md  installation.md  installation_guide.md  tutorial.md
doc/userguide/api/: datatype.md  exception.md  framework.md  frameworkDB.md  graph.md  graphDB.md  graph_store.md  graphdrawer.md  misc.md  motion.md  plot_style.md  predefined_graphs.md
doc/userguide/tutorials/: Shonan_meeting.md  basic.md  framework_database.md  graph_basics.md  graph_realizations.md  jupytext.toml  mesh_generation.md  motion.md  plotting.md  rigidity.md  rigidity_tutorial.md
pyrigi/: __init__.py  _cuts.py  _flexible_graph_stable_cut.py  _graph_input_check.py  _input_check.py  _pebble_di_graph.py  _pebble_digraph.py  _plot.py  _wrap.py  apex.py  conftest.py  data_type.py  directed_graph.py  exception.py  extension.py  framework.py  frameworkDB.py  framework_base.py  gaingraph.py  generic_rigidity.py  global_rigidity.py  graph.py  graphDB.py  graph_drawer.py  graphdrawer.py  graphsDB.py  matrix.py  matroid.py  matroidal_rigidity.py  misc.py  motion.py  plot_style.py  redundant_rigidity.py  separating_set.py  sparsity.py  test_general.py  warning.py
pyrigi/_utils/: _conversion.py  _doc.py  _graph_alias_mapping.py  _zero_check.py  linear_algebra.py  repetable_iterator.py  union_find.py
pyrigi/framework/: __init__.py  _general.py  base.py  conftest.py  framework.py
pyrigi/framework/_export/: export.py
pyrigi/framework/_plot/: _plot.py  plot.py
pyrigi/framework/_rigidity/: infinitesimal.py  matroidal.py  redundant.py  second_order.py  stress.py
pyrigi/framework/_transformations/: transformations.py
pyrigi/framework/plot/: _plot.py
pyrigi/framework/rigidity/: infinitesimal.py  second_order.py  (+1 more)
pyrigi/graph/: _general.py  apex.py  graph.py
pyrigi/graphDB/: __init__.py  db.py  query.py  service.py
pyrigi/graph_drawer/: __init__.py  graph_drawer.py
pyrigi/misc/: __init__.py  misc.py
pyrigi/motion/: __init__.py  approximate_motion.py  motion.py  parametric_motion.py
pyrigi/plot/: _plot.py
pyrigi/util/: __init__.py  repetable_iterator.py  union_find.py
scripts/: docstring_convert.py  migrate_docstrings.py  migration_targets.py
src/: AbstractMatrix.py  Framework.py  GraphsDB.py  Matroid.py  PyRigi.py  __init__.py
stablecut/: flexible_graphs.py  types.py  util.py
test/: __init__.py  conftest.py  sparse_writer.py  test__graph_input_check.py  test__input_check.py  test_apex.py  test_data_type.py  test_directed_graph.py  test_extension.py  test_framework.py  test_frameworkDB.py  test_general.py  test_generic_rigidity.py  test_global_rigidity.py  test_graph.py  test_graphDB.py  test_integration.py  test_matroid.py  test_matroidal_rigidity.py  test_misc.py  test_motion.py  test_pebble_di_graph.py  test_pebble_digraph.py  test_plot_style.py  test_redundant_rigidity.py  test_separating_set.py  test_signature.py  test_sparsity.py  test_sparsity_large.py  test_stablecut.py
test/_util/: test_union_find.py
test/framework/: __init__.py  test__general.py  test_base.py  test_framework.py
test/graph/: test_apex.py  test_general.py  test_graph.py  test_separating_set.py
test/graphDB/: test_column_registry.py  test_cross_check.py  test_db.py  test_fetch_strategies.py  test_ingestion.py  test_models.py  test_pretty.py  test_query.py  test_service.py  test_small_graphs.py
test/input_graphs/: K4.s6  K4.txt  not_circle_30_58.s6  not_sparse_3_5.txt  not_sparse_5_2.txt  not_sparse_6_6.txt  not_sparse_7_7.txt  random_6_8.txt  sparse_17_30.txt  sparse_1_1.txt  sparse_3_1.s6  sparse_3_1.txt  sparse_4_6.txt  tight_13_14.txt  tight_5_9.txt  tight_6_8.graph  tight_7_3.txt
test/misc/: test__input_check.py  test_misc.py
test/motion/: test_approximate_motion.py  test_motion.py  test_parametric_motion.py
test/test_data/: Precomputed_stresses_and_flexes.txt
test/util/: test_union_find.py
test/utils/: test__conversion.py  test__doc.py  test__zero_check.py  test_linear_algebra.py  test_union_find.py
test/wrapper/: _bad_wrapper.py  _bad_wrapper_base.py  _check.py  _helpers.py  _proxies.py  _wrappers.py  test_wrapper.py
tests/: test_general.py
(+174 files in other folders)
