[project]
name = "pyrigi"
version = "1.0.2"
dynamic = [ "readme", "classifiers", "dependencies", "optional-dependencies" ]
description = "Python package concerning the rigidity and flexibility of bar-and-joint frameworks."
requires-python = ">=3.11"
license = { text = "MIT" }
maintainers =  [
    { name = "Matteo Gallet", email = "matteo.gallet@units.it"},
    { name = "Georg Grasegger"},
    { name = "Matthias Himmelmann", email = "himmelmann1@uni-potsdam.de"},
    { name = "Jan Legerský", email = "jan.legersky@fit.cvut.cz"}
]
authors = [
    {name = "The PyRigi Developers"}
]
dependencies = ["sympy (>=1.13.3,<2.0.0)", "distinctipy (>=1.3.4,<2.0.0)", "networkx (>=3.4.2,<4.0.0)", "ipycanvas (>=0.13.3,<0.14.0)", "ipyevents (>=2.0.2,<3.0.0)", "contourpy (>=1.3.1,<2.0.0)", "matplotlib (>=3.10.0,<4.0.0)", "ipywidgets (>=8.1.5,<9.0.0)", "numpy (>=2.2.3,<3.0.0)", "ipython (>=8.32.0,<9.0.0)", "ipympl (>=0.9.6,<0.10.0)"]

[project.urls]
homepage = "https://pyrigi.github.io/PyRigi/"
repository = "https://github.com/PyRigi/PyRigi/"
documentation = "https://pyrigi.github.io/PyRigi/"
Issues = "https://github.com/PyRigi/PyRigi/issues"

[project.optional-dependencies]
realization-counting = ["lnumber"]
meshing = ["trimesh", "manifold3d"]

[tool.poetry]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
trimesh = {version = "^4.5.0", optional = true}
manifold3d = {version = "^3.0.1", optional = true}
lnumber = {version = "^0.13", optional = true}

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
pre-commit = "^3.7.1"
pytest = "^8.2.1"
pytest-doctestplus = "^1.2.1"
pytest-cov = "^6.0.0"

[tool.poetry.group.doc.dependencies]
furo = "^2024.8.6"
myst-nb = "^1.2.0"
sphinx = "^8.2.1"
sphinx-autobuild = "^2024.10.3"
sphinx-copybutton = "^0.5.2"
sphinx-design = "^0.6.1"
sphinx-math-dollar = "^1.2.1"
sphinx-proof = "^0.2.0"
sphinx-tippy = "^0.4.3"
sphinx-autodoc-typehints = "^3.1.0"
sphinxcontrib-bibtex = "^2.6.3"
sphinxcontrib-napoleon = "^0.7"
jupytext = "^1.16.7"
setuptools = "^75.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
doctest_plus = "enabled"
pythonpath = [
  "."
]
addopts = "-m 'not slow_main and not long_local'" # deselect large tests by default
# you can run all tests with -m 'not slow_main or slow_main'
markers = [
    "slow_main: marks slower tests run at merge to main",
    "long_local: marks long tests run locally",
    "realization_counting: marks tests using extra realization-counting",
    "meshing: marks tests using extra meshing"
]
filterwarnings = [
    'ignore::pyrigi.warning.RandomizedAlgorithmWarning',
    'ignore::pyrigi.warning.NumericalAlgorithmWarning',
    'ignore:FigureCanvasAgg is non-interactive, and thus cannot be shown:UserWarning'
]

[tool.jupytext]
formats = "ipynb,md:myst"
notebook_metadata_filter="jupytext"
